[metadata]
name = pyramid_cli
author = John Anderson
author_email = johna@gmail.com
summary = Command line utilities around pyramid
description-file = README.rst
home-page = http://www.trypyramid.com

[files]
packages =
    pyramid_cli

[entry_points]
console_scripts =
    pyramid = pyramid_cli:cli

[pbr]
warnerrors = True

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    *.egg
    demos

addopts =
    -rxEfs
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --ignore=setup.py

markers =
    unit
    integration
